# qol

./: .gitignore  README.md  TODO.md  config.py  const.py  defaults.py  info.py  paths.py  pyproject.toml  todo.md
athena/: AthInput.py  AthenaRun.py  AthenaRunOutput.py  alias.py  const.py  read.py
athena/table/: AthenaTable.py
bash/: BashScript.py  SlurmBashScript.py
data/ultramagnet/c_o/: table_data_1_matlab.txt  table_data_2_matlab.txt  (+6 more)
helper/: formatter.py  integrate.py
mesa/: const.py  create.py  data.py  launcher.py  read.py  sculpt.py
mesa/controls/: bc.py  coredef.py  hydro.py  init.py  io.py  kap.py  mesh.py  mix.py  net.py  pgstar.py  resolution.py  solver.py  stop.py  terminate.py  timestep.py  wind.py
mesa/data/: MesaTable.py  Seismology.py
mesa/launch/: MesaControl.py  MesaInlist.py  MesaInlistControl.py  MesaInlistProjectFile.py  MesaPythonScript.py  MesaWorkingDirectory.py
mesa/presets/: make_MS_mass_changer.py  make_merger.py  make_merger_MS_HeWD.py  make_merger_RG_HeWD.py  make_single_MS_HeWD.py  make_single_SBR.py
mesa/resources/: do_one  re
mesa/table/: MesaTable.py
notebooks/: make_merger_RG_HeWD.ipynb  make_mtglitch.ipynb  ms_plus_cowd.ipynb  pyplot_test.ipynb  remove_unbound_material_test.ipynb  reproduce_m_plus_wd.ipynb  ultramagnet_calculate_fields.ipynb
plotter/: prop_diagram.py
seismology/: GyreRun.py  Seismology.py  helper.py  methods_mag.py  methods_prop.py  methods_rot.py
slurm/: SlurmBashScript.py
tests/: mesa_tests.py
tools/: formatter.py  integrate.py
vis/: FancyAxes.py  __init__.py  pyplot.py
(+42 files in other folders)
